packages/commonwealth/client/scripts/views/components/sidebar/CommunitySection/TokenTradeWidget/TokenTradeWidget.scss
@use '../../../../../styles/shared';
@use '../../../../../styles/mixins/colors.module';

.TokenTradeWidget {
  display: flex;
  flex-direction: column;
  gap: 4px;
  padding: 12px;

  .header {
    display: flex;
    flex-direction: row;
    gap: 8px;
    align-items: center;
    .Text {
      letter-spacing: 0.5px;
    }
  }

  .token-metadata-row {
    display: flex;
    justify-content: space-between;
    align-items: center;

    .token-img {
      height: auto;
      width: 50px;
      border-radius: 50%;
      cursor: pointer;
      border: 1px solid colors.$neutral-100;
    }

    .token-address {
      display: flex;
      justify-content: flex-end;
      align-items: center;
      gap: 2px;
      .Text {
        color: colors.$neutral-800;
      }
    }
  }

  .pad-8 {
    padding: 0px 8px;
  }

  .action-btns {
    display: grid;
    gap: 8px;
    width: 100%;
    padding: 8px;

    &.cols-1 {
      grid-template-columns: 1fr;
    }

    &.cols-2 {
      grid-template-columns: 1fr 1fr;
    }

    button {
      text-transform: capitalize;
    }

    .btn-border {
      &:focus-within {
        border-width: 1px !important;
        padding: 0 !important;
      }

      margin: 0 !important;
      margin-top: auto;
    }
  }
}

